2006-01-13  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.5 for release

2006-01-13  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add a bunch of links for gnome-icon-theme

2006-01-13  Niko Mirthes  <nmirthes@gmail.com>

	* legacy-icon-mapping.xml: Updates for more KDE icons

2006-01-13  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for x-office-calendar and
	x-office-presentation
	Link gnome-mime-application-x-killustrator to image-x-generic
	Link folder_tar to package-x-generic
	Link package_editors to text-x-generic
	Link contents2 to x-office-address-book

2006-01-13  Eskil Bylund <eskil@letterboxes.org>

	* legacy-icon-mapping.xml: Add links for edit-find-replace, list-*,
	and more stock mail icons
	Link system-config-users to system-users
	Link redhat-system_tools to applications-system
	Link redhat-system_settins to preferences-system
	
2006-01-06  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.3 for release
	Update copyright year to include 2006

	* icon-name-mapping.pl.in: Update copyright year to include 2006
	
2006-01-06  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Some update for KDE icons (Niko Mirthes)
	Updates for some gnome icons, and additional icons (Rodney Dawes)

2005-12-16  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.2 for release

2005-12-16  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Some updates for KDE icons (Niko Mirthes)
	Add stock_proxy as a link for the proxy preferences icon

2005-12-15  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add new network-wireless-encrypted icon
	and a link to it for gnome-dev-wavelan-encrypted

2005-12-11  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.1 for release

2005-12-11  Rodney Dawes  <dobey@novell.com>

	* icon-name-mapping.pl.in: Define $LN_S to cp if on win32 and ln -s