@@ -1,3 +1,7 @@
+2006-01-19  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add links for night weather images
+
 2006-01-13  Rodney Dawes  <dobey@novell.com>
 
 	* configure.ac: Up version to 0.6.5 for release
